fix the align issues

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -114,7 +114,7 @@ section {
   ul {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: start !important;
     padding: 0px 0 30px;
     gap: 10px;
     li {
